# search4cure-live

./: .env  .gitignore  LICENSE  README.md  init.sh  pyproject.toml  start_app.sh
agent/: agent.py
agent/tools/: search_tools.py
backend/: pyproject.toml
backend/agent/: agent.py
backend/agent/tools/: search_tools.py
backend/api/: main.py  rag_api.py
backend/api/routes/: chat.py
backend/database/: schema.sql  spanner_client.py  spanner_writer.py
backend/embeddings/: image_embeddings.py  image_with_caption_processor.py  multimodal_embeddings.py  table_embeddings.py  text_embeddings.py
backend/graph/: edge_builder.py  node_builder.py
backend/ingestion/: arxiv_loader.py  caption_extractor.py  entity_extractor.py  image_extractor.py  page_extractor.py  pdf_processor.py  table_extractor.py
backend/pipeline/: run_full_ingestion.py
backend/services/: hybrid_search_service.py
backend/utils/: gcs_utils.py  id_utils.py  spanner_utils.py
docs/: agent_build.md  cloud_setup.md  ingestion-pipeline.md  spanner-graph-visualization.md
notebooks/: test_arxiv_loader.ipynb
scripts/: init.sh  setup.sh  setup_data.py
